--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/eagle-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>沙漠一只雕的博客</title>
+    <script src="/polyfill.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&family=Ma+Shan+Zheng&family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">
